--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
 
     <!-- Import Components -->
     <script src="./components/ProductDisplay.js"></script>
-
+    <!-- Import Components -->
+    <script src="./components/ReviewForm.js"></script>
+    <script src="./components/ReviewList.js"></script>
+    <!-- Mount App -->
     <!-- Mount App -->
     <script>
       const mountedApp = app.mount('#app')
